tests/sksl/errors/ContinueOutsideLoop.glsl
### Compilation failed:

error: 1: continue statement must be inside a loop
error: 2: continue statement must be inside a loop
2 errors
